yaml/3-framework.yaml
### 
# zuul server 
###

apiVersion: v1
kind: Service
metadata:
  name: zuulserver
  namespace: staging
  labels:
    app: zuulserver
spec:
  selector:
    app: zuulserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zuulserver
  namespace: staging
  labels:
    app: zuulserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zuulserver
  template:
    metadata:
      labels:
        app: zuulserver
    spec:
      nodeSelector:
        subnet: t4g-private
      containers:
      - name: zuulserver
        image: garyzhangscm/cwms-zuulsvr:v1.15
        imagePullPolicy: Always
        args: ["--spring.config.location=/usr/local/service/application.yml", "--spring.profiles.active=echotech-staging", "--server.port=5555", "--spring.main.allow-circular-references=true"]
        ports:
        - containerPort: 5555
        volumeMounts:
        - name: zuul-properties
          mountPath: /usr/local/service/application.yml
          subPath: application.yml
      volumes:
      - name: zuul-properties
        configMap:
          name: zuul-properties
          items:
            - key: application.yml
              path: application.yml 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuulserver
  namespace: staging
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
  #- host: staging.claytechsuite.com    
  # SSL Setting (Optional only if we are not using certificate-arn annotation)
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zuulserver
            port:
              number: 5555 
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: staging
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  type: NodePort
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: staging
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      nodeSelector:
        # subnet: kafka
        subnet: t4g-private
      containers:
      - name: zookeeper
        # image: wurstmeister/zookeeper
        image: zookeeper:3.8.0-openjdk
        resources:
          limits:
            cpu: "1"
            memory: "1024Mi"
          requests:
            cpu: "0.5"
            memory: "1024Mi"
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: kafkaservice
  namespace: staging
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  type: NodePort
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: staging
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      nodeSelector:
        # subnet: kafka
        subnet: t4g-private
      containers:
      - name: kafka
        image: wurstmeister/kafka
        resources:
          limits:
            cpu: "2"
            memory: "3072Mi"
          requests:
            cpu: "1"
            memory: "2048Mi"
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
spec:
  selector:
    app: redis
  type: NodePort
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: staging
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        subnet: t4g-private
      containers:
      - name: redis
        image: redis:6.0
        resources:
          limits:
            cpu: "0.5"
            memory: "1024Mi"
          requests:
            cpu: "0.5"
            memory: "1024Mi"
        ports:
        - containerPort: 6379        
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: staging
  labels:
    app: adminer
spec:
  selector:
    app: adminer
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: staging
  labels:
    app: database
spec:
  selector:
    app: database
  type: NodePort
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: staging
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      nodeSelector:
        subnet: t4g-private
      containers:
      - name: database
        image: mysql
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: staging
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      nodeSelector:
        subnet: t4g-private
      containers:
      - name: adminer
        image: adminer
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.25"
            memory: "256Mi"
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: staging
  annotations:
 #   kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 8080
